# deer

./: .gitignore  README.md  README.txt  pyproject.toml
deer/: encoder_model.py  utils.py
tests/: knowledge_probing_test.py
